# sudolver-models

./: README.md
data/model/: train.sh
data/original/: 03a0408b-f6b0-4bcd-b111-f43461ab8e05.json  072aa71b-874e-454a-8363-277c1014998f.json  0c50a990-2b3e-4521-9693-6a6182b2d36d.json  0e52f312-fc09-4874-bb2c-3aab8309db30.json  1f73a3a2-8bf4-4c9d-ba80-7033ce2830b0.json  21e7c1b5-6fd4-4ca4-9e6a-e6750db6ab03.json  226404b5-5602-40fc-be14-4d254b572cf6.json  3e185de7-4832-4233-ac4a-85b3f6756ddd.json  43b76af1-0464-49ed-b887-a850b1539178.json  4586af51-cbdf-4b2f-8827-3af14c46fa27.json  5ce04c6b-70c7-45ed-8b13-6232232d04ca.json  647e7d8a-9c6c-4aa1-addf-a03091b1bdbf.json  674659d9-1947-4aca-af4e-98dab0b2cb62.json  6b9fc072-74b8-4fc0-9976-2e3e09463a1a.json  73315d87-c138-4ba8-b864-cf9080f5ec03.json  7b2c852e-c463-4c76-8313-8c5514694a73.json  7be99b45-ce13-4da1-a6cd-7a58d5a0feef.json  7f1a41cf-1123-4871-959c-9aecec695357.json  8b646b6f-4820-4c4d-a641-6d5018c63bbd.json  8ff4b6a0-1f5c-4000-bb8a-d8e36826496d.json  91f40e2d-5fc9-42b4-9704-17e7d6545c8c.json  940c5243-8907-40cd-950a-93afdd78d765.json  9b8345c0-60dc-44ba-8b0f-8e92a30893a0.json  a2a7b6bb-4b85-401f-984f-ba831671b307.json  a2c5b364-032f-41b8-9373-080fa1917172.json  a9f9d098-5cf8-4f04-a150-2a00def18d7f.json  b5314919-dc4d-4882-95f2-8bb7cc41965c.json  b9426e53-9923-4cc5-b761-a7352f78c9aa.json  bb8c4de3-beaf-411c-825c-fe49c9d4a10c.json  c2c7f62d-2782-4ddd-8325-f7a5dd39918a.json  (+17 more)
src/: ImageAnalysis.py  ImageTableExtraction.py  SudokuDetection.py  manual_cv_experiments.ipynb  model_comparison.ipynb  pyproject.toml
(+399 files in other folders)
